fix gap tra i nomi e le icone nella toolbar

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    gap: 5px;
     font-size: 24px;
     color:white;
 }
